# cses-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/v1/: mod.rs  time.rs  weekday.rs
tests/: numberic.yaml  short.yaml  yaml.rs
