[package]
name = "cses-rs"
version = "0.2.0"
edition = "2021"
authors = ["Pizero <zhaory200707@outlook.com>"]
description = "A CSES spec impl in Rust"
rust-version = "1.84.1"
documentation = "https://docs.rs/cses-rs"
readme = "README.md"
keywords = ["cses", "data-structure"]
categories = ["data-structures"]
license = "MIT"
repository = "https://github.com/pizerolol/cses-rs"
homepage = "https://github.com/pizerolol/cses-rs"

[dependencies]
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_repr = "0.1.19"

[dev-dependencies]
serde_json = "1.0.138"
serde_yaml = "0.9.34"
